<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"

    tools:context=".LayoutNewRecord2Activity">


    <ImageView
        android:id="@+id/imageView"
        android:layout_width="match_parent"
        android:layout_height="84dp"
        app:srcCompat="@drawable/repair" />

    <EditText
        android:id="@+id/Service_date"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        android:hint="@string/date"
         />

    <EditText
        android:id="@+id/Service_activity"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        android:hint="@string/activity" />
    <EditText
        android:id="@+id/Service_costs"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        android:hint="@string/costs"

        />

    <EditText
        android:id="@+id/Service_mileage"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        android:ems="8"
        android:hint="@string/car_mileage"
        android:inputType="phone" />

    <Spinner
        android:id="@+id/spinner"
        android:layout_width="match_parent"
        android:layout_height="41dp"
        android:layout_margin="16dp"
        android:entries="@array/icons"
        android:textAlignment="center"
        />

    <Button
        android:id="@+id/button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"

        android:onClick="addClick"
        android:text="@string/ADD" />


</LinearLayout>
